--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "sommelier-drive-cryptos"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 rsa = {version = "0.7.0", default-features = false, features = ["std", "pem", "serde"]}
 aes-gcm = "0.10.1" 
@@ -19,5 +17,8 @@ easy_ffi = {version = "0.1.0", git = "https://github.com/SoraSuegami/easy_ffi.gi
 rand = "0.7.0"
 rand_xorshift = "0.2"
 
+[build-dependencies]
+cbindgen = "0.24.3"
+
 [lib]
-crate-type = ["cdylib","staticlib"]
+crate-type = ["cdylib"]
