--- a/cbindgen.toml
+++ b/cbindgen.toml
@@ -60,7 +60,7 @@ usize_is_size_t = true
 include = []
 exclude = []
 # prefix = "CAPI_"
-item_types = []
+item_types = ["enums", "structs", "functions"]
 renaming_overrides_prefixing = false
 
 
@@ -146,7 +146,7 @@ extra_bindings = []
 
 
 [parse.expand]
-crates = []
+crates = ["sommelier-drive-cryptos"]
 all_features = false
 default_features = true
 features = []
