--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ thiserror = "1.0.37"
 sha2 = "0.10.6"
 signature = "1.6.4"
 easy_ffi = {version = "0.1.0", git = "https://github.com/SoraSuegami/easy_ffi.git"}
+c_vec = "2.0.0"
 
 [dev-dependencies]
 rand = "0.7.0"
