Add c_api feature.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ serde = {version = "1.0.103", features = ["derive"]}
 thiserror = "1.0.37"
 sha2 = "0.10.6"
 signature = "1.6.4"
-easy_ffi = {version = "0.1.0", git = "https://github.com/SoraSuegami/easy_ffi.git"}
-c_vec = "2.0.0"
+easy_ffi = {version = "0.1.0", git = "https://github.com/SoraSuegami/easy_ffi.git", optional = true}
+
 
 [dev-dependencies]
 rand = "0.7.0"
@@ -23,3 +23,7 @@ cbindgen = "0.24.3"
 
 [lib]
 crate-type = ["cdylib"]
+
+[features]
+default = ["c_api"]
+c_api = ["easy_ffi"]
