--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ thiserror = "1.0.37"
 sha2 = "0.10.6"
 signature = "1.6.4"
 easy_ffi = {version = "0.1.0", git = "https://github.com/SoraSuegami/easy_ffi.git", optional = true}
-
+getrandom = { version = "0.2", features = ["js"] }
 
 [dev-dependencies]
 rand = "0.7.0"
