--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ sha2 = "0.10.6"
 signature = "1.6.4"
 easy_ffi = {version = "0.1.0", git = "https://github.com/SoraSuegami/easy_ffi.git", optional = true}
 getrandom = { version = "0.2", features = ["js"] }
+hex = {version = "0.4.3"}
+serde-hex = "0.1.0"
 
 [dev-dependencies]
 rand = "0.7.0"
