--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ signature = "1.6.4"
 easy_ffi = {version = "0.1.0", git = "https://github.com/SoraSuegami/easy_ffi.git", optional = true}
 getrandom = { version = "0.2", features = ["js"] }
 hex = {version = "0.4.3"}
+errno = {version = "0.2.8", optional = true}
 
 [dev-dependencies]
 rand = "0.7.0"
@@ -27,4 +28,4 @@ crate-type = ["rlib","cdylib"]
 
 [features]
 default = ["c_api"]
-c_api = ["easy_ffi"]
+c_api = ["easy_ffi", "errno"]
